<resources>
    <string name="app_name">News</string>
    <string name="title_home">Home</string>
    <string name="title_recommended">Recommended</string>
    <string name="title_all">Everything</string>
    <string name="title_info">About us</string>
    <string name="country_prompt">Choose a country</string>
    <string name="source_prompt">Choose a source</string>
    <string name="source_preference_button">Source button</string>
    <string name="language_preference_button">Language button</string>
    <string name="sorting_preference_button">Sorting button</string>
    <string name="top_headline_fragment_name">topheadlinefragment</string>
    <string name="all_fragment_name">allfragment</string>
    <string name="preferences_fragment">preferencesfragment</string>
    <string name="fragment_name_key">fragmentName</string>
    <string name="about_us_title_text">About us</string>
    <string name="about_us_description_text">Welcome to the NEWS app. This app uses News Api
                                            in order to provide the latest stories filtered
                                            through helpful filters such as sources,
                                            languages, and categories.</string>
    <string name="about_fragment_name">aboutfragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcomeTextTitle">Welcome,</string>
    <string name="sign_in_message">Please, sign in</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_email">Profile Email</string>
    <string name="profile_pic_content_description">The profile picture of the signed-in user</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="channel_name">new news notification</string>
    <string name="channel_description">used when there is breaking news to be delivered</string>
    <string name="make_fake_news_button_title">Make fake news</string>
    <string name="fake_news_transition_title">fakeNewsTitleTransition</string>
    <string name="fake_news_transition_description">fakeNewsDescriptionTransition</string>
    <string name="fake_news_transition_content">fakeNewsDescriptionContent</string>
    <string name="fake_news_transition_image">fakeNewsTransitionImage</string>

    <string name="title">title</string>
    <string name="hello_world">hello_world</string>
    <string name="image_detail_transition_name">imageDetailTransition</string>
    <string name="detail_image_content_description">the image associated with the article</string>
    <string name="DetailLinkContentDescription">A link that you can tap on in order to see the full article</string>
    <string name="news_item_image_content_description">The image representing the article</string>
</resources>
