<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:isScrollContainer="true"
        android:orientation="vertical"
        tools:context=".ui.MadeFakeNews">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/news_item_view_holder_border">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/finished_fake_news_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:transitionName="@string/fake_news_transition_title"
                android:fontFamily="@font/ubuntu_b"
                android:textSize="36sp"
                tools:text="title"
                android:layout_marginStart="@dimen/text_margin"
                android:background="@null" />

            <ImageView
                android:id="@+id/finished_fake_news_image"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:transitionName="@string/fake_news_transition_image"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/finished_fake_news_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="#000000"
                android:textSize="15sp"
                android:fontFamily="@font/ubuntu_r"
                tools:text="description"
                android:transitionName="@string/fake_news_transition_description"
                android:background="@null" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/finished_fake_news_Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/ubuntu_r"
                android:textColor="#000000"
                android:textSize="15sp"
                tools:text="content"
                android:transitionName="@string/fake_news_transition_content"
                android:background="@null"/>

            <TextView
                android:id="@+id/detail_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ubuntu_r"
                android:textColor="#000000"
                tools:text="source"
                android:text="Source: You"
                android:layout_marginBottom="@dimen/text_margin"/>
        </LinearLayout>

    </ScrollView>

