<?xml version="1.0" encoding="utf-8"?>

<TableLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
>
        <TableRow>
            <View
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginBottom="2dp"
                android:layout_height="3dp"
                android:background="@color/colorPrimary"
                />
        </TableRow>

    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:fontFamily="@font/ubuntu_r"
            android:text="Source"
            android:textColor="#000000" />
    </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

            <ImageButton
                android:id="@+id/source_cnn"
                android:src="@drawable/ic_cnn"
                android:contentDescription="@string/source_preference_button"
                android:layout_width="144dp"
                android:layout_height="48dp"
                style="@style/PreferenceButtonStyle"
                android:clickable="true"
                />

            <ImageButton
                android:id="@+id/source_bbc"
                android:layout_width="144dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_bbc"
                android:contentDescription="@string/source_preference_button"
                style="@style/PreferenceButtonStyle"
                />
            </LinearLayout>
        </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        >
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <ImageButton
            android:id="@+id/source_fox"
            android:src="@drawable/ic_fox"
            android:layout_width="144dp"
            android:layout_height="48dp"
            style="@style/PreferenceButtonStyle"
            android:contentDescription="@string/source_preference_button"
            />
        <ImageButton
            android:id="@+id/source_msnbc"
            android:src="@drawable/ic_msnbc"
            android:layout_width="144dp"
            android:layout_height="48dp"
            style="@style/PreferenceButtonStyle"
            android:contentDescription="@string/source_preference_button"
            />
        </LinearLayout>
    </TableRow>

    <TableRow>
        <View
            android:layout_height="3dp"
            android:background="@color/colorPrimary"
            />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:fontFamily="@font/ubuntu_r"
            android:text="Language"
            android:textColor="#000000" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
        <Button
            android:text="en"
            android:layout_height="60dp"
            android:layout_width="60dp"
            style="@style/PreferenceButtonStyle"
            android:layout_marginEnd="@dimen/text_margin"
            android:contentDescription="@string/language_preference_button"
            />

            <Button
                android:text="ru"
                android:layout_width="60dp"
                android:layout_height="60dp"
                style="@style/PreferenceButtonStyle"
                android:layout_marginEnd="@dimen/text_margin"
                android:contentDescription="@string/language_preference_button"
                />

            <Button
                android:text="fr"
                android:layout_width="60dp"
                android:layout_height="60dp"
                style="@style/PreferenceButtonStyle"
                android:layout_marginEnd="@dimen/text_margin"
                android:contentDescription="@string/language_preference_button"
                />

            <Button
                android:text="es"
                android:layout_width="60dp"
                android:layout_height="60dp"
                style="@style/PreferenceButtonStyle"
                android:contentDescription="@string/language_preference_button"
                />
        </LinearLayout>
    </TableRow>
    <TableRow>
        <View
            android:layout_marginTop="24dp"
            android:layout_marginBottom="2dp"
            android:layout_height="3dp"
            android:background="@color/colorPrimary"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:fontFamily="@font/ubuntu_r"
            android:text="Sort By"
            android:textColor="#000000" />
    </TableRow>
    <TableRow
        android:gravity="center"
        android:layout_width="match_parent"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="publishedAt"
                style="@style/PreferenceButtonStyle"
                android:contentDescription="@string/sorting_preference_button"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="relevancy"
                style="@style/PreferenceButtonStyle"
                android:contentDescription="@string/sorting_preference_button"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="popularity"
                style="@style/PreferenceButtonStyle"
                android:contentDescription="@string/sorting_preference_button"
                />
        </LinearLayout>
    </TableRow>
    </TableLayout>